# clawchat

./: .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  TODO-for-human.md  TODO.md  docker-compose.deploy.yml  docker-compose.yml  lefthook.yml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  schedule.json  杭州算力券申请指南.md
agent-server/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
agentkit/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vitest.config.ts
app/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/icons/: icon.icns
app/desktop/src-tauri/src/: main.rs
autopilot/: Cargo.toml
autopilot/src/: config.rs  engine.rs  main.rs  types.rs  writer.rs
cli/: .gitignore  Cargo.toml  go.mod  go.sum  main.go  pyproject.toml
cli/cmd/: logs.go  ps.go  rm.go  root.go  start.go  stop.go
cli/manager/: pyproject.toml
cli/manager/src/manager/: projects.py
cli/src/: main.rs  util.rs
cli/src/backtest/: mod.rs
cli/src/clawchat/: __init__.py  __main__.py  _paths.py  _report_core.py  cmd_backtest.py  cmd_batch_backtest.py  cmd_check.py  cmd_compare.py  cmd_correlation.py  cmd_emergency.py  cmd_funding.py  cmd_grid_search.py  cmd_market.py  cmd_pnl.py  cmd_report.py  cmd_review.py  cmd_risklog.py  cmd_status.py  cmd_strategy_pnl.py  cmd_watcher.py  main.py  report_engine.py
cli/src/cmd/: batch_backtest.rs  check.rs  compare.rs  correlation.rs  data_status.rs  emergency.rs  funding.rs  grid_search.rs  mod.rs  pnl.rs  risk_log.rs  status.rs  strategy_pnl.rs  trade_cmd.rs  watch.rs  watcher.rs
cli/tests/: test_backtest.py  test_correlation.py  test_criteria.py  test_emergency.py  test_exchange.py  test_funding.py  test_report.py  test_report_engine.py  test_review.py  test_risklog.py  test_status.py
cli/trading/: pyproject.toml
cli/trading/src/trading/: exchange.py  grid.py  market.py
config/: alerts.json  schedule.json
container-server/: Dockerfile  package-lock.json  package.json
data-engine/: Cargo.toml
data-engine/src/: backfill.rs  collector.rs  main.rs  validator.rs
data-engine/tests/: integration.rs
discovery/: Cargo.toml
discovery/src/: arbitrage.rs  evaluator.rs  generator.rs  lib.rs  main.rs  output.rs  selector.rs
discovery/tests/: integration.rs
docs/: 01-产品概述.md  02-account-system.md  03-功能设计.md  04-architecture.md  04-系统架构.md  05-database-schema.md  05-数据库设计.md  06-relay-protocol.md  06-消息协议.md  07-rest-api.md  08-offline-sync.md  09-infrastructure.md  10-openclaw-plugin.md  11-Agent托管.md  12-商业模式.md  13-launch-strategy.md  14-区块链.md  15-error-handling.md  API路由.md  本地开发流程.md  架构总览.md  测试规则.md  部署检查清单.md
e2e/: package.json  playwright.config.ts
engine/: Cargo.toml  SCHEMA.md
engine/reports/: high_water_rust.json
engine/src/: config.rs  config_watcher.rs  event_loop.rs  exchange.rs  filter.rs  gateway.rs  global_risk.rs  ledger.rs  lib.rs  main.rs  metrics.rs  order_router.rs  risk.rs  smart_order_router.rs  startup.rs  state.rs  strategy.rs  symbol_manager.rs  trade.rs  types.rs  worker.rs  worker_manager.rs  ws_feed.rs
im-server/: Dockerfile  package-lock.json  package.json  start.sh  vitest.config.ts
ironclaw-server/: Dockerfile  package-lock.json  package.json  tsconfig.json
kpi/: 2026-03-18-retro.md  2026-03-18.md  PLAN-architecture-cleanup.md  PLAN-hft-refactor.md  REQ-stoploss.md  framework.md  report-framework.md
mcp-server/: pyproject.toml
mcp-server/app/: logging_config.py  main.py  middleware.py
mcp-server/app/routers/: health.py
mcp-server/tests/: test_health.py
nanoclaw-server/: .dockerignore  Dockerfile  Dockerfile.agent  entrypoint.sh  package-lock.json  package.json
notes/: 2026-03-19-agentmail-api.md  2026-03-19-discovery-run1.md  2026-03-19-ws-timeout-75s.md  openclaw-plugin-pitfalls.md
openclaw-server/: Dockerfile  Dockerfile.agent  entrypoint.sh  package-lock.json  package.json
ops/: Cargo.toml
ops/src/: main.rs
ops/src/backtest/: mod.rs  strategies.rs
ops/src/cmd/: alerts.rs  arbitrage.rs  backtest.rs  capacity.rs  compare.rs  correlation.rs  create_portfolio.rs  emergency.rs  evaluate.rs  exchange_cmd.rs  expand_symbol.rs  ledger.rs  mod.rs  notify.rs  pnl.rs  review.rs  risk_log.rs  scan_symbols.rs  transfer.rs
ops/src/report/: mod.rs
promo-video/: .gitignore  package-lock.json  package.json  tsconfig.json
report-engine/: Cargo.toml
report-engine/src/: daily.rs  data.rs  main.rs  snapshot.rs  weekly.rs
reports/: daily-2026-03-18.md  equity.csv
requirements/: 2026-03-19-dynamic-ws-symbol.md  2026-03-19-symbol-manager.md
rust-engine/: Cargo.toml
scripts/: backtest.py  batch_backtest.py  bollinger.py  check.py  criteria.py  db-backup.sh  db-restore.sh  diagnose.sh  ecs-setup.sh  exchange.py  futures_exchange.py  grid.py  grid_search.py  hft_engine.py  live_vs_backtest.py  market.py  notify.py  pnl.py  projects.py  risk_guard.py  rsi.py  runner.py  status.py  strategy_pnl.py  strategy_watcher.py  ws_feed.py
server/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
shared/: Cargo.toml
shared/src/: account.rs  alerts.rs  candle.rs  capacity.rs  config_util.rs  correlation.rs  criteria.rs  data.rs  exchange.rs  indicators.rs  lib.rs  logging.rs  paths.rs  regime.rs  risk.rs  state.rs  strategy.rs  symbols.rs  trade.rs  types.rs  volatility.rs
skill-browser/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
skill-registry-server/: Dockerfile  package-lock.json  package.json
todo/: agentkit-async-bash.md  agentkit-background-tasks.md  agentkit-context-compression.md  agentkit-dangerous-command-guard.md  agentkit-multi-agent-team.md  agentkit-skill-two-layer.md  agentkit-subagent.md  agentkit-task-system.md  agentkit-todo-tracking.md  agentkit-tool-dispatch.md  agentkit-worktree-isolation.md
(+2450 files in other folders)
