[workspace]
resolver = "2"
members = ["shared", "engine", "autopilot", "ops", "data-engine", "discovery", "report-engine"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
dotenvy = "0.15"
notify = "7"
tempfile = "3"
arrow = "54"
parquet = { version = "54", features = ["snap"] }
csv = "1"
colored = "2"
url = "2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
rayon = "1"
async-trait = "0.1"
clawchat-shared = { path = "shared" }
