[project]
name = "clawchat"
version = "0.1.0"
description = "ClawChat 量化交易工作站 CLI"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.44",
    "httpx[socks]>=0.28.1",
    "binance-connector>=3.12.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
clawchat = "clawchat.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawchat"]
