[package]
name = "discovery"
version.workspace = true
edition.workspace = true

[[bin]]
name = "discovery"
path = "src/main.rs"

[dependencies]
clawchat-shared = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
rayon = "1"

[dev-dependencies]
tempfile = { workspace = true }
