[package]
name = "hft-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hft-engine"
path = "src/main.rs"

[[bin]]
name = "risk-engine"
path = "src/bin/risk_engine.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
