[package]
name = "hft-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hft-engine"
path = "src/main.rs"

[dependencies]
clawchat-shared = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
