[project]
name = "mcp-server"
version = "0.0.0"
description = "ClawChat MCP server"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
