[package]
name = "clawchat-ops"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clawchat"
path = "src/main.rs"

[dependencies]
clawchat-shared = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
csv = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
