[package]
name = "report-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "report-engine"
path = "src/main.rs"

[dependencies]
clawchat-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
