[package]
name = "clawchat-shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
