[project]
name = "manager"
version = "0.1.0"
description = "项目 / 子账户管理"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.44",
    "agentmail>=0.4.7",
]

[project.scripts]
projects = "manager.projects:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manager"]
