[project]
name = "trading"
version = "0.1.0"
description = "行情监控 + 交易策略"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.44",
]

[project.scripts]
market = "trading.market:main"
grid = "trading.grid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]
