[package]
name = "clawchat-desktop"
version = "0.0.1"
description = "ClawChat Desktop"
authors = []
edition = "2021"

[lib]
name = "clawchat_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
